--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 .pnp.js
 venv
 env
-todo.db
+/api/todo.db
 
 # testing
 /coverage
@@ -24,3 +24,4 @@ __pycache__
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+api/todo.db
