--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kilogram",
+  "name": "picogram",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "axios": "^0.27.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
+    "react-images-uploading": "^3.1.6",
     "react-router-dom": "^6.3.0",
     "react-scripts": "^2.1.3",
     "uuid": "^8.3.2",
